--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,10 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="@layout/activity_main"
-    tools:context="com.dipoletech.nigeriansocietyofengineers.MainActivityFragment">
+    tools:context="com.dipoletech.nigeriansocietyofengineers.MainActivityFragment"
+    android:orientation="vertical"
+    >
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
@@ -18,7 +21,8 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        />
 
 
 </LinearLayout>
