--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#0277BD</color>
     <color name="colorAccent">#f45b8f</color>
+
+    <color name="drawer_bg">#81D4FA</color>
+    <color name="tint_bg">#4FC3F7</color>
 </resources>
