--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context="com.dipoletech.nigeriansocietyofengineers.MainActivity"
     android:fitsSystemWindows="true">
 <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/cord"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -23,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
