--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -39,40 +39,51 @@
         android:padding="30dp">
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/username"
-            android:typeface="sans"
-            android:textSize="14sp"
-            android:textStyle="bold"/>
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/email"-->
+            <!--android:typeface="sans"-->
+            <!--android:textSize="16sp"-->
+            <!--android:textColor="@color/colorPrimaryDark"-->
+            <!--android:textStyle="bold"/>-->
         <EditText
-            android:id="@+id/login_username"
+            android:id="@+id/login_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:layout_marginBottom="5dp"/>
+            android:inputType="textEmailAddress"
+            android:hint="@string/hint_email"
+            android:background="@android:color/white"
+            android:padding="10dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="@android:color/holo_green_dark"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/password"
-            android:typeface="sans"
-            android:textSize="14sp"
-            android:textStyle="bold"/>
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/password"-->
+            <!--android:typeface="sans"-->
+            <!--android:textSize="16sp"-->
+            <!--android:textColor="@color/colorPrimaryDark"-->
+            <!--android:textStyle="bold"/>-->
 
         <EditText
             android:id="@+id/login_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:layout_marginBottom="5dp" />
+            android:hint="@string/hint_password"
+            android:background="@android:color/white"
+            android:padding="10dp"
+            android:layout_marginBottom="20dp"
+            android:textColor="@android:color/holo_green_dark"/>
 
         <Button
             android:id="@+id/login_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@android:color/holo_blue_dark"
             android:text="@string/login"/>
 
         <TextView
@@ -80,12 +91,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/or"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
             android:layout_margin="10dp"/>
 
         <com.google.android.gms.common.SignInButton
             android:layout_gravity="center"
             android:id="@+id/sign_in_with_google"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
 
