--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -9,7 +9,8 @@
         android:layout_height="match_parent"
         android:src="@drawable/bg1"
         android:fitsSystemWindows="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/nse_logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,53 +35,72 @@
         android:orientation="vertical"
         android:padding="30dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/email"
-            android:typeface="sans"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/name_tv"-->
+            <!--android:typeface="sans"-->
+            <!--android:textSize="16sp"-->
+            <!--android:textColor="@color/colorPrimaryDark"-->
+            <!--android:textStyle="bold" />-->
 
         <EditText
+            android:id="@+id/reg_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:layout_marginBottom="5dp" />
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/username"
-            android:typeface="sans"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_blue_light"
             android:inputType="text"
-            android:layout_marginBottom="5dp" />
+            android:hint="@string/hint_name"
+            android:background="@android:color/white"
+            android:padding="10dp"
+            android:layout_marginBottom="10dp" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/password"
-            android:typeface="sans"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/email"-->
+            <!--android:typeface="sans"-->
+            <!--android:textSize="16sp"-->
+            <!--android:textColor="@color/colorPrimaryDark"-->
+            <!--android:textStyle="bold" />-->
 
         <EditText
+            android:id="@+id/reg_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_blue_light"
+            android:inputType="textEmailAddress"
+            android:hint="@string/hint_email"
+            android:background="@android:color/white"
+            android:padding="10dp"
+            android:layout_marginBottom="10dp" />
+
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/password"-->
+            <!--android:typeface="sans"-->
+            <!--android:textSize="16sp"-->
+            <!--android:textColor="@color/colorPrimaryDark"-->
+            <!--android:textStyle="bold" />-->
+
+        <EditText
+            android:id="@+id/reg_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:layout_marginBottom="5dp" />
+            android:textColor="@android:color/holo_blue_light"
+            android:hint="@string/hint_password"
+            android:background="@android:color/white"
+            android:padding="10dp"
+            android:layout_marginBottom="20dp" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/register_button"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@android:color/holo_green_dark"
             android:text="@string/register" />
 
         <TextView
@@ -90,6 +110,8 @@
             android:typeface="sans"
             android:textSize="14sp"
             android:textStyle="bold"
+            android:textColor="@android:color/holo_blue_dark"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center"
             android:gravity="center" />
     </LinearLayout>
