--- a/app/src/main/res/layout/info_item.xml
+++ b/app/src/main/res/layout/info_item.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="5dp"
     android:layout_marginLeft="5dp"
     card_view:cardCornerRadius="5dp"
+    android:paddingBottom="5dp"
     android:layout_marginRight="5dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="5dp">
 
         <ImageView
             android:id="@+id/icon_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_gravity="left"
             android:src="@drawable/ic_action_info"
             android:layout_alignParentStart="true" />
@@ -25,46 +28,167 @@
             android:paddingLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/full_name"
-            android:textSize="18sp"
+            android:text="@string/info_title"
+            android:textSize="14sp"
             android:textStyle="bold"
-            android:layout_marginBottom="5dp"
             android:textColor="@color/colorPrimaryDark"
-            android:layout_above="@+id/view"
+            android:layout_alignBottom="@+id/icon_image_view"
             android:layout_toRightOf="@+id/icon_image_view"
             android:layout_toEndOf="@+id/icon_image_view" />
 
-        <ImageView
-            android:id="@+id/edit_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_edit"
-            android:layout_gravity="right"
-            android:tint="@android:color/darker_gray"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="0.25dp"
-            android:background="@color/colorAccent"
-            android:layout_alignBottom="@+id/edit_icon"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+        <!--<TextView-->
+            <!--android:paddingLeft="25dp"-->
+            <!--android:paddingBottom="5dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/name"-->
+            <!--android:textStyle="bold"-->
+            <!--android:textSize="14sp"-->
+            <!--android:id="@+id/textView12"-->
+            <!--android:layout_below="@+id/view2"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_alignParentStart="true" />-->
 
         <TextView
             android:paddingLeft="25dp"
             android:paddingBottom="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/name"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:layout_alignParentBottom="true"
+            android:text="@string/date_sample"
+            android:textSize="10sp"
+            android:textStyle="italic|bold"
+            android:paddingRight="5dp"
+            android:paddingTop="5dp"
+            android:id="@+id/textView12"
+            android:layout_alignTop="@+id/movie_title"
+            android:layout_alignRight="@+id/view"
+            android:layout_alignEnd="@+id/view" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="0.25dp"
+            android:layout_margin="5dp"
+            android:background="@color/colorAccent"
+            android:layout_below="@+id/icon_image_view"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:id="@+id/image_info"
+            android:src="@drawable/computer_scieince"
+            android:layout_alignTop="@+id/textView1"
+            android:layout_toRightOf="@+id/icon_image_view"
+            android:layout_toEndOf="@+id/icon_image_view" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/info_by"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:id="@+id/textView1"
+            android:layout_below="@+id/view"
+            android:layout_toRightOf="@+id/movie_title"
+            android:layout_toEndOf="@+id/movie_title"
+            android:layout_marginLeft="22dp"
+            android:layout_marginStart="22dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/smple_info"
+            android:paddingRight="5dp"
+            android:maxLines="5"
+            android:maxLength="160"
+            android:id="@+id/textView10"
+            android:layout_below="@+id/textView1"
+            android:layout_alignLeft="@+id/textView1"
+            android:layout_alignStart="@+id/textView1" />
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="0.25dp"
+            android:layout_margin="5dp"
+            android:background="@android:color/darker_gray"
+            android:layout_below="@+id/image_info"
+            android:layout_alignLeft="@+id/view"
+            android:layout_alignStart="@+id/view" />
+
+        <ImageButton
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/imageButton"
+            android:background="@android:color/transparent"
+            android:tint="@android:color/darker_gray"
+            android:layout_below="@+id/view2"
+            android:layout_alignLeft="@+id/image_info"
+            android:layout_alignStart="@+id/image_info"
+            android:src="@drawable/ic_action_like" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/like_text"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:id="@+id/textView11"
+            android:layout_below="@+id/view2"
+            android:layout_toRightOf="@+id/imageButton"
+            android:layout_toEndOf="@+id/imageButton" />
+
+        <ImageButton
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/imageButton2"
+            android:background="@android:color/transparent"
+            android:tint="@android:color/darker_gray"
+            android:src="@drawable/ic_action_monolog"
+            android:layout_alignTop="@+id/textView11"
+            android:layout_alignLeft="@+id/textView10"
+            android:layout_alignStart="@+id/textView10" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/comment_text"
+            android:paddingLeft="5dp"
+            android:paddingTop="5dp"
+            android:id="@+id/textView13"
+            android:layout_alignTop="@+id/view2"
+            android:layout_toRightOf="@+id/imageButton2"
+            android:layout_toEndOf="@+id/imageButton2" />
+
+        <ImageButton
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:id="@+id/imageButton3"
+            android:background="@android:color/transparent"
+            android:tint="@android:color/darker_gray"
+            android:layout_below="@+id/view2"
+            android:layout_alignLeft="@+id/textView12"
+            android:layout_alignStart="@+id/textView12"
+            android:src="@drawable/ic_action_share" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/share_text"
+            android:paddingLeft="5dp"
+            android:id="@+id/textView14"
+            android:layout_alignTop="@+id/imageButton3"
+            android:layout_toRightOf="@+id/imageButton3"
+            android:layout_toEndOf="@+id/imageButton3" />
+
 
     </RelativeLayout>
 
