--- a/app/src/main/res/layout/payment_item.xml
+++ b/app/src/main/res/layout/payment_item.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="5dp"
     android:layout_marginLeft="5dp"
@@ -15,10 +15,10 @@
 
         <ImageView
             android:id="@+id/icon_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_gravity="left"
-            android:src="@drawable/ic_action_info"
+            android:src="@drawable/ic_action_paypal"
             android:layout_alignParentStart="true" />
 
         <TextView
@@ -26,12 +26,10 @@
             android:paddingLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/full_name"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="5dp"
+            android:text="@string/Payment_title"
+            android:textSize="14sp"
             android:textColor="@color/colorPrimaryDark"
-            android:layout_above="@+id/view"
+            android:layout_alignBottom="@+id/icon_image_view"
             android:layout_toRightOf="@+id/icon_image_view"
             android:layout_toEndOf="@+id/icon_image_view" />
 
@@ -39,19 +37,46 @@
             android:id="@+id/edit_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_edit"
+            android:src="@drawable/ic_send"
+            android:layout_margin="5dp"
             android:layout_gravity="right"
             android:tint="@android:color/darker_gray"
-            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
         <View
             android:id="@+id/view"
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="0.25dp"
             android:background="@color/colorAccent"
-            android:layout_alignBottom="@+id/edit_icon"
+            android:layout_below="@+id/icon_image_view"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/date_sample"
+            android:textStyle="italic"
+            android:textSize="10sp"
+            android:layout_above="@+id/view"
+            android:layout_alignRight="@+id/view"
+            android:layout_alignEnd="@+id/view" />
+
+        <TextView
+            android:paddingLeft="25dp"
+            android:paddingBottom="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/name"
+            android:textSize="14sp"
+            android:id="@+id/textView7"
+            android:layout_below="@+id/view"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -61,9 +86,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
-            android:textStyle="bold"
             android:textSize="14sp"
-            android:layout_alignParentBottom="true"
+            android:id="@+id/textView8"
+            android:layout_below="@+id/textView7"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:paddingLeft="25dp"
+            android:paddingBottom="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/name"
+            android:textSize="14sp"
+            android:id="@+id/textView9"
+            android:layout_below="@+id/textView8"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
